# airbnb-clone-django

./: LICENSE  README.md  pyproject.toml
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: authentications.py  settings.py  urls.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  apps.py  models.py
houses/migrations/: 0001_initial.py  0002_house_pets_allowed.py
medias/: urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: models.py  serializers.py  urls.py  views.py
rooms/migrations/: 0003_alter_amenity_options.py  0004_room_category_alter_room_amenities_alter_room_owner.py
users/: serializers.py  urls.py  views.py
users/migrations/: 0003_alter_user_avatar.py
wishlists/: serializers.py  views.py
wishlists/migrations/: 0001_initial.py  0002_alter_wishlist_experiences_alter_wishlist_rooms_and_more.py
