[tool.poetry]
name = "airbnb-clone-django"
version = "0.1.0"
description = "airbnb clone with django and react"
authors = ["toweringcloud <toweringcloud@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.12.7"
django = "^5.1.1"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
django-cors-headers = "^4.5.0"
djangorestframework = "^3.15.2"
pillow = "^10.4.0"
pyjwt = "^2.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
coverage = "^7.6.4"
ipython = "^8.29.0"
poetry = "1.8.5"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
werkzeug = "^3.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
